Copiamos solo la carpeta dist

--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -34,10 +34,8 @@ jobs:
 
       - name: Sync files to S3
         run: |
-          aws s3 sync . s3://${{ secrets.S3_BUCKET }} \
-            --exclude "*" \
-            --include "dist/*" \
-            --delete
+          aws s3 sync dist/ s3://${{ secrets.S3_BUCKET }} \
+                --delete
       
       - name: Invalidate CloudFront cache
         run: |
